log
Thu Apr 30 08:07:28 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:51:10: error: ‘TreeMap’ has no member named ‘lowe_than’; did you mean ‘lower_than’?
   51 |     map->lowe_than=lowe_than;
      |          ^~~~~~~~~
      |          lower_than
treemap.c:51:20: error: ‘lowe_than’ undeclared (first use in this function); did you mean ‘lower_than’?
   51 |     map->lowe_than=lowe_than;
      |                    ^~~~~~~~~
      |                    lower_than
treemap.c:51:20: note: each undeclared identifier is reported only once for each function it appears in
aeae9a5
Thu Apr 30 08:07:54 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/60
9468e27
Thu Apr 30 08:10:35 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
e3c5140
Thu Apr 30 08:11:42 PM UTC 2026: 
 tests:  4|7
total_score: 5/60
cea9d56
Thu Apr 30 08:30:41 PM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:62:11: error: ‘aux’ undeclared (first use in this function)
   62 |     while(aux!=NULL){
      |           ^~~
treemap.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
a42fe77
Thu Apr 30 08:31:21 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/60
980235b
Thu Apr 30 08:42:21 PM UTC 2026: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:104:19: error: ‘newNode’ undeclared (first use in this function)
  104 |     tree->current=newNode;
      |                   ^~~~~~~
treemap.c:104:19: note: each undeclared identifier is reported only once for each function it appears in
e842036
Thu Apr 30 08:44:48 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:105:19: error: ‘newNode’ undeclared (first use in this function)
  105 |     tree->current=newNode;
      |                   ^~~~~~~
treemap.c:105:19: note: each undeclared identifier is reported only once for each function it appears in
52433d4
Thu Apr 30 08:46:52 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:85:5: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   85 |     Treenode* newNode->parent =parent;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:85:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   85 |     Treenode* newNode->parent =parent;
      |                      ^~
treemap.c:106:19: error: ‘newNode’ undeclared (first use in this function)
  106 |     tree->current=newNode;
      |                   ^~~~~~~
treemap.c:106:19: note: each undeclared identifier is reported only once for each function it appears in
11cdf83
Thu Apr 30 08:47:06 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:105:19: error: ‘newNode’ undeclared (first use in this function)
  105 |     tree->current=newNode;
      |                   ^~~~~~~
treemap.c:105:19: note: each undeclared identifier is reported only once for each function it appears in
3558c1f
